# open-utdr-maps

./: .gitignore  CONTRIBUTING.md  LICENSE-CC-BY-NC-4.0  README.md  contributing.md  contributing_zh-hans.md  justfile  readme.md  readme_zh-hans.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  bug_report_zh_hans.md  curation_task.md  curation_task_en.md  curation_task_zh_hans.md
.github/workflows/: ci.yml  pages.yml  pr-checks.yml  pr-label.yml
conversion_info/: deltarune_ch1.toml  deltarune_ch2.toml  deltarune_ch3.toml  deltarune_ch4.toml  undertale.toml
curated/undertale/: TESTROOM.tmx  bullettest.tmx  room2.tmx  room_adate.tmx  room_afinaltest.tmx  room_area1.tmx  room_area1_2.tmx  room_asghouse1.tmx  room_asghouse2.tmx  room_asghouse3.tmx  room_asgoreroom.tmx  room_asrielappears.tmx  room_asrielmemory.tmx  room_asrielroom.tmx  room_asrielroom_final.tmx  room_asrieltest.tmx  room_basement1.tmx  room_basement1_final.tmx  room_basement2.tmx  room_basement2_final.tmx  room_basement3.tmx  room_basement3_final.tmx  (+301 more)
docs/: conversion_spec.md  conversion_spec_en.md  conversion_spec_zh-hans.md  copyright.md  copyright_en.md  copyright_zh-hans.md  layer_spec.md  layer_spec_en.md
scripts/: curation_blacklist.toml  curation_migrate.py
viewer/: .gitignore  Cargo.toml  Trunk.toml  index.html
viewer/patches/bevy_ecs_tiled/src/tiled/: reader.rs
viewer/patches/bevy_ecs_tiled/src/tiled/world/: loader.rs
viewer/scripts/: generate_manifest.py  link_assets.sh  prepare_assets.sh  sync_dist_assets.sh
viewer/src/: main.rs
(+6878 files in other folders)
